# kuhl-haus-mdp

./: .coveragerc  .gitignore  .readthedocs.yml  Build-Docs.ps1  CHANGELOG.rst  CLAUDE.md  CONTRIBUTING.rst  Dockerfile  README.md  README.rst  SECURITY.md  SECURITY.rst  build-docs.sh  conftest.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  update-changelog.sh
.github/workflows/: codeql.yml  docs.yml  publish-to-pypi.yml  release.yml
docs/: architecture-diagram.rst  architecture.puml  architecture.rst  conf.py  configuration.rst  index.rst  requirements.txt  troubleshooting.rst
docs/_static/: custom.css
docs/mdp/: kuhl_haus.mdp.analyzers.rst  kuhl_haus.mdp.components.rst  kuhl_haus.mdp.data.rst  kuhl_haus.mdp.enum.rst  kuhl_haus.mdp.exceptions.rst  kuhl_haus.mdp.helpers.rst  kuhl_haus.mdp.integ.rst  kuhl_haus.mdp.models.rst  kuhl_haus.mdp.rst  kuhl_haus.rst  modules.rst
docs/troubleshooting/: layout-recovery-v041.rst
src/kuhl_haus/mdp/: __init__.py
src/kuhl_haus/mdp/analyzers/: __init__.py  analyzer.py  daily_range_analyzer.py  enhanced_quote_analyzer.py  finlight_data_analyzer.py  leaderboard_analyzer.py  massive_data_analyzer.py  top_stocks.py  top_trades_analyzer.py
src/kuhl_haus/mdp/components/: __init__.py  finlight_data_listener.py  finlight_data_processor.py  finlight_data_queues.py  finlight_simple_listener.py  market_data_cache.py  market_data_scanner.py  massive_data_listener.py  massive_data_processor.py  massive_data_queues.py  widget_data_service.py
src/kuhl_haus/mdp/data/: __init__.py  market_data_analyzer_result.py  top_stocks_cache_item.py
src/kuhl_haus/mdp/enum/: __init__.py  constants.py  finlight_data_cache.py  finlight_data_queue.py  market_data_cache_keys.py  market_data_cache_ttl.py  market_data_pubsub_keys.py  market_data_scanner_names.py  market_status_value.py  massive_data_queue.py  widget_data_cache_keys.py  widget_data_cache_limits.py  widget_data_cache_ttl.py
src/kuhl_haus/mdp/exceptions/: __init__.py  data_analysis_exception.py
src/kuhl_haus/mdp/helpers/: __init__.py  observability.py  process_manager.py  queue_name_resolver.py  serde.py  structured_logging.py  utils.py  web_socket_message_serde.py
src/kuhl_haus/mdp/integ/: utils.py
src/kuhl_haus/mdp/models/: market_data_cache_keys.py  market_data_cache_ttl.py
tests/: test_widget_data_cache_enums.py
tests/analyzers/: test_analyzer.py  test_daily_range_analyzer.py  test_enhanced_quote_analyzer.py  test_finlight_data_analyzer.py  test_leaderboard_analyzer.py  test_massive_data_analyzer.py  test_top_stocks.py  test_top_stocks_rehydrate.py  test_top_trades_analyzer.py
tests/components/: test_finlight_data_listener.py  test_finlight_data_processor.py  test_finlight_data_queues.py  test_finlight_simple_listener.py  test_market_data_cache.py  test_market_data_scanner.py  test_market_data_scanner_tracing.py  test_massive_data_listener.py  test_massive_data_processor.py  test_massive_data_queues.py  test_widget_data_service.py
tests/data/: test_market_data_analyzer_result.py  test_top_stocks_cache_item.py
tests/helpers/: test_observability.py  test_process_manager.py  test_serde.py  test_structured_logging.py  test_utils.py
