[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "kuhl-haus-mdp"
version = "0.0.1"
description = "Market data processing pipeline for stock market scanner"
authors = [
    { name = "Tom Pounders", email = "git@oldschool.engineer" },
]
readme = "README.md"
requires-python = "<3.13,>=3.9.21"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
    "websockets",
    "aio-pika",
    "redis[asyncio]",
    "tenacity",
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-dotenv",
    "massive"
]

[project.urls]
Homepage = "https://github.com/kuhl-haus/kuhl-haus-mdp"
Documentation = "https://github.com/kuhl-haus/kuhl-haus-mdp/wiki"
Source = "https://github.com/kuhl-haus/kuhl-haus-mdp.git"
Changelog = "https://github.com/kuhl-haus/kuhl-haus-mdp/commits"
Tracker = "https://github.com/kuhl-haus/kuhl-haus-mdp/issues"

[project.optional-dependencies]
testing = [
    "setuptools",
    "pdm-backend",
    "pytest",
    "pytest-cov",
]


[tool.setuptools]
zip-safe = true
include-package-data = true
package-dir = {"" = "src"}
packages = {find = {where = ["src"], exclude = ["tests"]}}

[tool.pytest.ini_options]
addopts = ["--verbose"]
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[tool.devpi.upload]
no_vcs = 1
formats = ["bdist_wheel"]

[tool.flake8]
max_line_length = 88
extend_ignore = ["E203", "W503"]
exclude = [".tox", "build", "dist", ".eggs", "docs/conf.py"]

[tool.pyscaffold]
version = "4.6"
package = "mdp"
extensions = ["namespace"]
namespace = "kuhl_haus"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
includes = ["src/kuhl_haus"]