[build-system]
requires = ["pdm-backend", "setuptools-scm>=8"]
build-backend = "pdm.backend"

[project]
name = "kuhl-haus-mdp"
dynamic = ["version"]
description = "Market data processing pipeline for stock market scanner"
authors = [
    { name = "Tom Pounders", email = "git@oldschool.engineer" },
]
readme = "README.md"
requires-python = ">=3.14"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
    "aiohttp",
    "aio-pika",
    "fastapi",
    "massive",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "pydantic-settings",
    "python-dotenv",
    "python-json-logger>=2.0.0",
    "redis",
    "tenacity",
    "uvicorn[standard]",
    "websockets",
]

[project.urls]
Homepage = "https://github.com/kuhl-haus/kuhl-haus-mdp"
Documentation = "https://kuhl-haus-mdp.readthedocs.io"
Source = "https://github.com/kuhl-haus/kuhl-haus-mdp.git"
Changelog = "https://github.com/kuhl-haus/kuhl-haus-mdp/commits"
Tracker = "https://github.com/kuhl-haus/kuhl-haus-mdp/issues"

[project.optional-dependencies]
testing = [
    "setuptools",
    "pdm-backend",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pdm]
distribution = true
version = { source = "scm" }

[tool.pdm.build]
package-dir = "src"
includes = ["src/kuhl_haus"]

[tool.setuptools]
zip-safe = true
include-package-data = true
package-dir = {"" = "src"}
packages = {find = {where = ["src"], exclude = ["tests"]}}

[tool.pytest.ini_options]
addopts = ["--verbose"]
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[tool.devpi.upload]
no_vcs = 1
formats = ["bdist_wheel"]

[tool.flake8]
max_line_length = 88
extend_ignore = ["E203", "W503", "C901"]
exclude = [".tox", "build", "dist", ".eggs", "docs/conf.py"]

[tool.pyscaffold]
version = "4.6"
package = "mdp"
extensions = ["namespace"]
namespace = "kuhl_haus"
